# dol

./: .gitignore  Cargo.toml  README.md  Rocket.toml
migrations/2021-05-21-082658_users/: down.sql  up.sql
src/: main.rs  models.rs
src/index/: ping.rs
src/users/: mod.rs
