[package]
name = "dol"
version = "0.1.0"
authors = ["Meesha <44530786+meesha7@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.9"
rocket_contrib = { version = "0.4.9", features= ["diesel_sqlite_pool"] }
diesel = { version = "1.4.4", features = ["sqlite"] }
dotenv = "0.15.0"
serde = { version = "1.0.126", features = ["derive"] }
